yair-io/tests/lit/mod/bad_fn_or_var.ya
// RUN: @yair_as @file --color never

mod "😀" {
  // CHECK: error: Unknown declaration within module
  // CHECK: ^ expected export, fn, var, or '}' to close the module
  bad
}
